--- a/lesson38 github/dice-game/index.html
+++ b/lesson38 github/dice-game/index.html
@@ -14,7 +14,7 @@
     />
     <link type="text/css" rel="stylesheet" href="style.css" />
 
-    <title>Dice Ganbaa Game</title>
+    <title>Ganbaa Dice Game</title>
   </head>
 
   <body>
